# fnal-cetbuildtools

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README  README.md  cetbuildtoolsConfig.cmake.in
Modules/: BasicPlugin.cmake  BuildDictionary.cmake  BuildPlugins.cmake  BuildSubdirectories.cmake  CMakeLists.txt  CetBasicConfigVersion-AnyNewerVersion.cmake.in  CetBasicConfigVersion-ExactVersion.cmake.in  CetBasicConfigVersion-SameMajorVersion.cmake.in  CetBuildTable.cmake  CetCMakeConfig.cmake  CetCMakeEnv.cmake  CetCMakeUtils.cmake  CetCopy.cmake  CetExclude.cmake  CetGetProductInfo.cmake  CetHaveQual.cmake  CetMake.cmake  CetMakeCompletions.cmake  CetPrepend.cmake  CetRegexEscape.cmake  CetRootCint.cmake  CetTest.cmake  CetUtilities.cmake  CheckClassVersion.cmake  CheckUpsVersion.cmake  EnsureOutOfSourceBuild.cmake  FindCetPackage.cmake  FindCompilerVersion.cmake  FindUpsArt.cmake  FindUpsBoost.cmake  FindUpsGeant4.cmake  FindUpsPackage.cmake  FindUpsRoot.cmake  InstallFW.cmake  InstallFhicl.cmake  InstallFiles.cmake  InstallGdml.cmake  InstallHeaders.cmake  InstallLicense.cmake  InstallPerllib.cmake  (+12 more)
config/: mailinglist.cfg
doc/SCD-projects-2012-10-31/: .gitignore  makefile  scd-ssi-build.tex
example/: CMakeLists.txt  README
example/ToyCmake/: CMakeLists.txt  README
example/ToyCmake/ToyCmake/: CMakeLists.txt  DoMath.cc  DoMath.h  SquareIt.cpp
example/ToyCmake/ToyCmake/Hello/: CMakeLists.txt  Hello.cc
example/ToyCmake/ToyCmake/Math/: CMakeLists.txt  DoMath.cc
example/ToyCmake/ToyCmake/MathIO/: CMakeLists.txt  writeResult.cc  writeResult.h
example/ToyCmake/ToyCmake/Square/: CMakeLists.txt  SquareIt.cpp
example/ToyCmake/test/: CMakeLists.txt  ToyCmakeTest.cc
example/ToyCmake/ups/: CMakeLists.txt  ToyCmake-config.cmake.in  ToyCmake.table.in  ToyCmake.version.in  product_deps  product_deps.in  product_list  setup_for_development  toycmake.table.in
src/: CMakeLists.txt
structure-docs/: README.md  osg.fnal.products.larsoft.txt  ups-setup-art.txt
templates/: CMakeLists.txt  README  generic.table.in  generic.version.in  product_deps.template  product_deps.template.in  product_list.template  setup_deps.template  setup_for_development.noarch.template  setup_for_development.template
test/: CMakeLists.txt  CheckUpsVersion_t.cmake
ups/: CMakeLists.txt  cetbuildtools-config.cmake.in  cetbuildtools.table.in  cetbuildtools.version.in  product-config.cmake.in  product_deps  setup_for_development
