
INSTALL(FILES
  BasicPlugin.cmake
  BuildDictionary.cmake
  BuildSubdirectories.cmake
  CetBasicConfigVersion-AnyNewerVersion.cmake.in
  CetBasicConfigVersion-ExactVersion.cmake.in
  CetBasicConfigVersion-SameMajorVersion.cmake.in
  CetBuildTable.cmake
  CetCMakeConfig.cmake
  CetCMakeEnv.cmake
  CetCMakeUtils.cmake
  CetCopy.cmake
  CetCurrentSubdir.cmake
  CetGetProductInfo.cmake
  CetHaveQual.cmake
  CetMake.cmake
  CetParseArgs.cmake
  CetRegexEscape.cmake
  CetRootCint.cmake
  CetTest.cmake
  CheckUpsVersion.cmake
  EnsureOutOfSourceBuild.cmake
  FindCompilerVersion.cmake
  FindUpsBoost.cmake
  FindUpsGeant4.cmake
  FindUpsPackage.cmake
  FindUpsRoot.cmake
  InstallPerllib.cmake
  InstallPython.cmake
  InstallSource.cmake
  ParseUpsVersion.cmake
  ProcessSmc.cmake
  RunAndCompare.cmake
  SetCompilerFlags.cmake
  SetFlavorQual.cmake
  UseCPack.cmake
  DESTINATION "${CMAKE_INSTALL_MODULEDIR}"
  )
